gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-link-arg-attribute.rs
#[link(kind = "link-arg", name = "foo")]
// { dg-error ".E0658." "" { target *-*-* } .-1 }
extern "C" {}

fn main() {}

